@@ -55,6 +55,9 @@ Starts SMSD Windows service.
 \fB\-k\fR, \fB\-\-stop\-service\fR
 Stops SMSD Windows service.
 .TP
+\fB\-f\fR, \fB\-\-max-failures\fR=\fIcount\fR
+Terminate after defined number of failures. Use 0 to not terminate (this is default).
+.TP
 \fB\-X\fR, \fB\-\-suicide\fR=\fIseconds\fR
 Kills itself after number of seconds.
 .TP
