@@ -28,6 +28,7 @@ ChangeLog
 [-] * Do not use MPBR/SPBR for other than phone memory (bug #1076).
 [-] * Fix crash with unknown CME error (bug #1082).
 [-] * Fixed connecting to Onda devices (LP #501025).
+[+] * SMSD can terminate itself after defined number of failures.
     
 20091222 - 1.27.0
     
